# duct

./: .gitignore  CLAUDE.md  CLI-COMMANDS-DETAILED.md  CLI-COMMANDS.md  README.md  SPEC.md  TODO.md
duct-cli/: pyproject.toml
duct-tui/: SPEC.md  pyproject.toml
duct-tui/.claude/skills/textual-guide/: SKILL.md
duct-tui/src/duct_tui/: __init__.py  app.py  avatar_cache.py  data.py  icons.py  mermaid.py  phases.py  theme.py
duct-tui/src/duct_tui/modals/: __init__.py  confirm.py  help.py  launch_agent.py  launch_directory.py  launch_session.py  notifications.py  ticket_switcher.py
duct-tui/src/duct_tui/screens/: __init__.py  full.py
duct-tui/src/duct_tui/styles/: app.tcss  full.tcss
duct-tui/src/duct_tui/widgets/: __init__.py  action_execute.py  action_panel.py  action_render.py  artifact_view.py  attention_queue.py  fuzzy_combobox.py  orchestrator_tab.py  pr_panel.py  pr_render.py  pr_tab.py  session_panel.py  session_preview.py  sync_status.py  task_panel.py  ticket_badge.py  ticket_card.py  ticket_card_list.py  ticket_filter_bar.py  ticket_header.py  ticket_list.py  ticket_summary_pane.py  ticket_tab.py  vim_mixin.py  workspace_panel.py  workspace_render.py
duct-tui/tests/: conftest.py  test_mermaid.py  test_orchestrator_run_polling.py  test_session_ux.py  test_sync_status.py  test_ticket_switcher.py  test_ticket_tab_agents.py  test_ticket_tab_sessions.py  test_workflow_actions.py
duct-tui/tests/widgets/: test_action_execute.py  test_action_render.py  test_fuzzy_combobox.py  test_pr_render.py  test_workspace_render.py
scripts/: duct-sandbox-docker.sh  (+2 more)
(+151 files in other folders)
