[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duct-tui"
version = "0.1.0"
description = "Terminal UI for duct workspace management"
requires-python = ">=3.11"
dependencies = [
    "textual>=8.0",
    "textual-image>=0.12",
    "duct",
]

[project.optional-dependencies]
dev = ["textual-dev", "pytest", "ruff"]

[project.scripts]
duct-tui = "duct_tui.app:main"

[tool.hatch.build]
artifacts = ["*.tcss", "*.png"]

[tool.hatch.build.targets.wheel]
packages = ["src/duct_tui"]
